main icon - vertical-align:middle has been added

--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
 
             <div class="main-box">
                 <div class="main-column">
-                    <div class="main-icon"> <img src="img/time.svg" alt="ikona" /></div>
-                    <div class="main-text">Laziness filter </br></br> you can find places, events and food based on your level
-                        of laziness. If you are too lazy to set it up we can set it up at 100% for you. </div>
+                    <div class="main-icon"><img src="img/time.svg" alt="ikona"/></div>
+                    <div class="main-text"><h3>Laziness Filter</h3><p>You can find places, events and food based on your level
+                        of laziness. If you are too lazy to set it up we can set it up at 100% for you.</p></div>
                 </div>
 
                 <div class="main-column">
-                    <div class="main-icon"> <img src="img/user.svg" alt="ikona" /></div>
-                    <div class="main-text">Companion matcher </br></br>if you want to do nothing together with a fellow sloth.</div>
+                    <div class="main-icon"><img src="img/user.svg" alt="ikona"></div>
+                    <div class="main-text"><h3>Companion Matcher </h3><p>If you want to do nothing together with a fellow sloth.</p></div>
                 </div>
 
                 <div class="main-column">
                     <div class="main-icon"> <img src="img/bulb.svg" alt="ikona" /></div>
-                    <div class="main-text">Idea hub </br></br> bring your ideas about what to do instead of real work and let
-                        other be inspired by your genious.</div>
+                    <div class="main-text"><h3>Idea Hub</h3><p>Bring your ideas about what to do instead of real work and let
+                        other be inspired by your genious.</p> </div>
                 </div>
             </div>
 
