--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="nav">
         <img class="logo" src="img/mini logo.png"></a>
 
-        <div class="menu">
+        <div class="menu"> M
             <a href="#hero" class="nav-item">Hero</a>
             <a href="#main" class="nav-item">Main</a>
             <a href="#form" class="nav-item">Form</a>
