form in index fix

--- a/index.html
+++ b/index.html
@@ -204,16 +204,14 @@
             <div class="form">
                 <form>
                     <div class="form-input">
-                        <div class="form-text">STAY IN TOUCH</div>
-
-                        <div class="form-text2">Został po raz pierwszy użyty w XV w. <br> przez nieznanego drukarza <br>
-
-
+                        <div class="form-text">
+                            Let's get started
                         </div>
+
                         <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
-                        <button type="button">Submit</button>
+                        <button type="button">Sign up</button>
                     </div>
                 </form>
             </div>
