--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>Projekt Leniwców</title>
 
-    <!-- <link rel="stylesheet" href="project.css"> -->
+    <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="project.desktop.css" media="(min-width: 1000px)">
 
 
