--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Projekt Leniwców</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Gamja+Flower|Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="project.desktop.css" media="(min-width: 1000px)">
 </head>
 
@@ -27,18 +27,18 @@
         <div class="hero-container">
             <div class="hero-left">
                 <div class="hero-text">
-                    <div class="hero-text__big">
+                    <h2 class="hero-text__big">
                         Laziness Radar
-                    </div>
+                    </h2>
 
                     <div class="hero-text__small">
                         for people looking for things to do when they do not want to do a
                         thing
                     </div>
-                </div>
 
-                <div class="hero-button">
-                    <a class="hero-button__color" href="#"><b>OUR TEAM</b></a>
+                    <div class="hero-button">
+                        <a class="hero-button__color" href="#">OUR TEAM</a>
+                    </div>
                 </div>
             </div>
 
