--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             Let's get started
                         </div>
 
-                        <input type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
+                        <input class="form-text__input" type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
                         <button type="button">Sign up</button>
