amendments in the main section - text style and position

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                             of laziness.
                             <br />
                             If you are too lazy to set it up we can set
-                            <br />
-                            it up at 100% for
-                            you.
+                            it up at 100% for you.
                         </p>
                     </div>
                 </div>
@@ -95,9 +93,7 @@
                         <h3>Idea Hub</h3>
                         <p>
                             Bring your ideas about what to do instead of real work and let
-                            other be inspired
-                            <br />
-                            by your genious.
+                            other be inspired by your genious.       
                         </p>
                     </div>
                 </div>
