new text on hero-button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="hero-button">
-                        <a class="hero-button__color" href="#">OUR TEAM</a>
+                        <a class="hero-button__color" href="#">LEARN MORE</a>
                     </div>
                 </div>
             </div>
