--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="hero-button">
-                        <a class="hero-button__color" href="#">LEARN MORE</a>
+                        <a class="hero-button__color" href="#form">LEARN MORE</a>
                     </div>
                 </div>
             </div>
