click div added, bg color change

--- a/game/game.html
+++ b/game/game.html
@@ -26,7 +26,12 @@
                 </div>
             </div>
             <div class="task-click-field">
-                CLICK FIELD
+                <div class="sloth-img">
+                    sloth img goes here
+                </div>
+                <div class="click-me">
+click me
+                </div>
             </div>
             <div class="temp-content">
                 STUFF FOR LATER
@@ -38,7 +43,7 @@
             <div class="main">MAIN</div>
 
             <!-- right -->
-            <div class="shop-title">LAZY SHOP</div>
+            <div class="shop-title">LAZY STORE</div>
             <div class="upgrades">UPGRADES</div>
             <div class="automate">AUTOMATES</div>
         </div>
