border style, score prettier

--- a/game/game.html
+++ b/game/game.html
@@ -20,9 +20,10 @@
         <div class="game-container">
             <!-- left -->
             <div class="score-content">
+                
                 SCORE board
                 <div class="score">
-                    current score
+                    <h3>Score: <span class="current-score">0</span></h3>
                 </div>
             </div>
             <div class="task-click-field">
