--- a/game/game.html
+++ b/game/game.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <link href="https://fonts.googleapis.com/css?family=Gamja+Flower|Pacifico" rel="stylesheet">
+
     <link rel="stylesheet" href="game.css">
 
 
@@ -20,18 +22,22 @@
         <div class="game-container">
             <!-- left -->
             <div class="score-content">
-                
-                SCORE board
-                <div class="score">
-                    <h3>Score: <span class="current-score">0</span></h3>
+                <div class="score-counters">
+                    <div class="score">
+                        <h3>Score: <span class="current-score">0</span></h3>
+                    </div>
+                    <div class="score-per-second">
+                        <p>per second: <span class="current-score-per-second">0</span> </p>
+                    </div>
                 </div>
+
             </div>
             <div class="task-click-field">
                 <div class="sloth-img">
                     sloth img goes here
                 </div>
                 <div class="click-me">
-click me
+                    click me
                 </div>
             </div>
             <div class="temp-content">
