--- a/game/game.html
+++ b/game/game.html
@@ -23,6 +23,7 @@
             <!-- left -->
             <div class="score-content">
                 <div class="score-counters">
+                    <!-- hook span classes for numbers!  -->
                     <div class="score">
                         <h3>Score: <span class="current-score">0</span></h3>
                     </div>
