divs and hooks ready for upgrades

--- a/game/game.html
+++ b/game/game.html
@@ -47,13 +47,34 @@
 
 
             <!-- center -->
-            <div class="menu">MENU</div>
+            <div class="menu">
+                <div class="time-counter">
+                    <!-- use span to hook numbers!  -->
+                    <h2>TIME LEFT: <span class="current-time">30</span> seconds</h2>
+                </div>
+            </div>
+
             <div class="main">MAIN</div>
 
             <!-- right -->
             <div class="shop-title">LAZY STORE</div>
-            <div class="upgrades">UPGRADES</div>
-            <div class="automate">AUTOMATES</div>
+            <div class="upgrades">
+                <div class="click-upgrade">
+                    <!-- use span classes for easy hooks! -->
+                    <p>Upgrade clicking power!</p>
+                    <p>Click power: 10 each</p> 
+                    <p>Cost: <span class="click-up-cost">20</span></p> 
+                    <p>Count: <span class="click-up-count">0</span></p> 
+                </div>
+            </div>
+            <div class="automate">
+                <div class="auto-one">
+                    <p>Warrior Sloth</p>
+                    <p>Autoclick power: 10 each</p>
+                    <p>Cost: <span class="auto-one-cost">50</span></p> 
+                    <p>Count: <span class="auto-one-count">0</span></p> 
+                </div>
+            </div>
         </div>
     </div>
 
