script comments in html

--- a/game/game.html
+++ b/game/game.html
@@ -78,8 +78,12 @@
         </div>
     </div>
 
+    <!-- vvv scripts goes here vvv -->
 
+
+    
     <script src="game.js"></script>
+    <!-- ^^^ game.js always last ^^^ -->
 </body>
 
 
