bg img change, gameover screen added, click note added

--- a/game/game.html
+++ b/game/game.html
@@ -38,7 +38,7 @@
                     sloth img goes here
                 </div>
                 <div class="click-me">
-                    click me
+                    <p>TODO <br>TASK</p>
                 </div>
             </div>
             <div class="temp-content">
@@ -54,12 +54,20 @@
                 </div>
             </div>
 
-            <div class="main">MAIN</div>
+            <div class="main">
+                <!-- appear after game ends, make some js for this -->
+                <div class="end-screen">
+                    <p>  GAME OVER  </p>
+                    <p>  ¯\_(ツ)_/¯ </p>
+                    <p>Final Score: <span class='final-score'>1000</span></p>
+
+                </div>
+            </div>
 
             <!-- right -->
             <div class="shop-title">LAZY STORE</div>
             <div class="upgrades">
-                <div class="click-upgrade">
+                <div class="click-upgrade upgrade-item">
                     <!-- use span classes for easy hooks! -->
                     <p>Upgrade clicking power!</p>
                     <p>Click power: 10 each</p> 
@@ -81,7 +89,7 @@
     <!-- vvv scripts goes here vvv -->
 
 
-    
+
     <script src="game.js"></script>
     <!-- ^^^ game.js always last ^^^ -->
 </body>
