PH borders removed, layout fix

--- a/game/game.html
+++ b/game/game.html
@@ -56,10 +56,11 @@
             <div class="main">
                 <!-- appear after game ends, make some js for this -->
                 <div class="end-screen">
-                    <p>  GAME OVER  </p>
-                    <p>  ¯\_(ツ)_/¯ </p>
-                    <p>Final Score: <span class='final-score'>1000</span></p>
-
+                    <div class='end-screen-text'>
+                        <p> GAME OVER </p>
+                        <p> ¯\_(ツ)_/¯ </p>
+                        <p>Final Score: <span class='final-score'>1000</span></p>
+                    </div>
                 </div>
             </div>
 
@@ -69,17 +70,17 @@
                 <div class="click-upgrade upgrade-item">
                     <!-- use span classes for easy hooks! -->
                     <p>Upgrade clicking power!</p>
-                    <p>Click power: 10 each</p> 
-                    <p>Cost: <span class="click-up-cost">20</span></p> 
-                    <p>Count: <span class="click-up-count">0</span></p> 
+                    <p>Click power: 10 each</p>
+                    <p>Cost: <span class="click-up-cost">20</span></p>
+                    <p>Count: <span class="click-up-count">0</span></p>
                 </div>
             </div>
             <div class="automate">
                 <div class="auto-one">
                     <p>Warrior Sloth</p>
                     <p>Autoclick power: 10 each</p>
-                    <p>Cost: <span class="auto-one-cost">50</span></p> 
-                    <p>Count: <span class="auto-one-count">0</span></p> 
+                    <p>Cost: <span class="auto-one-cost">50</span></p>
+                    <p>Count: <span class="auto-one-count">0</span></p>
                 </div>
             </div>
         </div>
