upgrade block styled

--- a/game/game.html
+++ b/game/game.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="automate">
-                <div class="auto-one">
+                <div class="auto-one automate-item">
                     <p>Warrior Sloth</p>
                     <p>Autoclick power: 10 each</p>
                     <p>Cost: <span class="auto-one-cost">50</span></p>
