--- a/game/game.html
+++ b/game/game.html
@@ -69,7 +69,7 @@
             <div class="upgrades">
                 <div class="click-upgrade upgrade-item">
                     <!-- use span classes for easy hooks! -->
-                    <p>Upgrade clicking power!</p>
+                    <p>Upgrade clicking power</p>
                     <p>Click power: 10 each</p>
                     <p>Cost: <span class="click-up-cost">20</span></p>
                     <p>Count: <span class="click-up-count">0</span></p>
@@ -77,7 +77,7 @@
             </div>
             <div class="automate">
                 <div class="auto-one automate-item">
-                    <p>Warrior Sloth</p>
+                    <p>WARRIOR SLOTH</p>
                     <p>Autoclick power: 10 each</p>
                     <p>Cost: <span class="auto-one-cost">50</span></p>
                     <p>Count: <span class="auto-one-count">0</span></p>
