--- a/game/game.html
+++ b/game/game.html
@@ -89,7 +89,7 @@
     <!-- vvv scripts goes here vvv -->
 
 
-
+    <script src="clickField.js"></script>
     <script src="game.js"></script>
     <!-- ^^^ game.js always last ^^^ -->
 </body>
