--- a/game/game.html
+++ b/game/game.html
@@ -91,6 +91,8 @@
 
 
     <script src="game.js"></script>
+    <script src="update_score.js"></script>
+    <script src="click_me.js"></script>
     <!-- ^^^ game.js always last ^^^ -->
 </body>
 
