--- a/game/game.html
+++ b/game/game.html
@@ -91,7 +91,7 @@
 
     <script src="clickField.js"></script>
     <script src="game.js"></script>
-    <script src="update_score.js"></script>
+    <script src="change_score.js"></script>
     <script src="click_me.js"></script>
     <!-- ^^^ game.js always last ^^^ -->
 </body>
