sending form function

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
     <div id="form">
         <div class="form-container">
             <div class="form">
-                <form>
+                <form action="https://formspree.io/joachim.orlowski@gmail.com"
+                method="POST">
+              
                     <div class="form-input">
                         <div class="form-text">
                             Let's get started
@@ -116,8 +118,9 @@
                         <input class="form-text__input" type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
-                        <button type="button">Sign up</button>
+                        <button type="submit">Sign up</button>
                     </div>
+                    
                 </form>
             </div>
         </div>
