--- a/game/game.html
+++ b/game/game.html
@@ -88,12 +88,14 @@
 
     <!-- vvv scripts goes here vvv -->
 
-
+    <script src="automate.js"></script>
     <script src="clickField.js"></script>
-    <script src="game.js"></script>
-    <script src="change_score.js"></script>
     <script src="click_me.js"></script>
-    <!-- ^^^ game.js always last ^^^ -->
+    <script src="change_score.js"></script>
+
+    <script src="game.js"></script>
+
+    <!-- ^^^ game.js ALWAYS LAST ^^^ -->
 </body>
 
 
