--- a/game/game.html
+++ b/game/game.html
@@ -92,6 +92,7 @@
 
     <script src="game.js"></script>
     <script src='end.js'></script>
+    <script src='popUp.js'></script>
     <!-- ^^^ game.js always last ^^^ -->
 </body>
 
