--- a/game/game.html
+++ b/game/game.html
@@ -92,6 +92,8 @@
     <script src="clickField.js"></script>
     <script src="game.js"></script>
     <script src="change_score.js"></script>
+    <script src="clickUpgradeField.js"></script>
+    <script src="clickUpgradeScore.js"></script>
     <!-- ^^^ game.js always last ^^^ -->
 </body>
 
