changing type=email; add required email function

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             Let's get started
                         </div>
 
-                        <input class="form-text__input" type="text" id="uname" name="name" placeholder="Your@email.com" size="30">
+                        <input required class="form-text__input" type="email" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
                     <div class="form-btn">
                         <button type="submit">Sign up</button>
