redirect to game screen

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
                         <input required class="form-text__input" type="email" id="uname" name="name" placeholder="Your@email.com" size="30">
                     </div>
+                    <input type="hidden" name="_next" value="game/game.html" />
                     <div class="form-btn">
                         <button type="submit">Sign up</button>
                     </div>
