--- a/game/game.html
+++ b/game/game.html
@@ -89,12 +89,13 @@
     <!-- vvv scripts goes here vvv -->
 
     <script src="automate.js"></script>
-    <script src="clickUpgradeScore.js"></script>
+    <!-- <script src="clickUpgradeScore.js"></script>
     <script src="change_score.js"></script>
-    <script src="clickField.js"></script>
+    <script src="clickField.js"></script> -->
     <script src="game.js"></script>
-    <script src="clickUpgradeField.js"></script>
-    <script src="change_score.js"></script>
+    <!-- <script src="clickUpgradeField.js"></script>
+    <script src="change_score.js"></script> -->
+    <script src="upgrade.js"></script>
 
     <script src="game.js"></script>
     <script src='end.js'></script>
