Start/End countdown clock works

--- a/game/game.html
+++ b/game/game.html
@@ -59,7 +59,7 @@
                     <div class='end-screen-text'>
                         <p> GAME OVER </p>
                         <p> ¯\_(ツ)_/¯ </p>
-                        <p>Final Score: <span class='final-score'>1000</span></p>
+                        <p>Final Score: <span class='final-score'></span></p>
                     </div>
                 </div>
             </div>
@@ -91,10 +91,10 @@
 
     <script src="automate.js"></script>
     <script src="upgrade.js"></script>
+    <script src="end_screen.js"></script>
+    <script src="game.js"></script>
+    <script src="game.js"></script>
 
-    <script src="game.js"></script>
-    <script src="game.js"></script>
-    <script src='end.js'></script>
    
     <!-- ^^^ game.js always last ^^^ -->
     <!-- ^^^ game.js ALWAYS LAST ^^^ -->
