var score set as global var

--- a/game/game.html
+++ b/game/game.html
@@ -88,6 +88,10 @@
 
     <!-- vvv scripts goes here vvv -->
 
+    <script>
+        var score = parseInt(document.querySelector(".current-score").innerText);
+        var scoreOnClick = 0;
+    </script>
 
     <script src="automate.js"></script>
     <script src="upgrade.js"></script>
