--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div id="form">
         <div class="form-container">
             <div class="form">
-                <form action="https://formspree.io/joachim.orlowski@gmail.com"
+                <form action="https://formspree.io/remek87@gmail.com"
                 method="POST">
               
                     <div class="form-input">
