form describe & stylings

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                     <div class="form-input">
                         <div class="form-text">
-                            Let's get started
+                            Subscribe to newsletter to access the game of most lazyest sloth in the world :D
                         </div>
 
                         <input required class="form-text__input" type="email" id="uname" name="name" placeholder="Your@email.com" size="30">
