--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
     <div id="nav">
-        <img class="logo" src="img/mini logo.png"></a>
+        <img class="logo" src="https://img.clipartxtras.com/4c5f69166afe2325b73fbef1a81fff25_bitcoin-millionaire-monthly-profit-july-2017-up-0514-bitcoins-sloth-face-clipart_278-278.jpeg"
+            alt="sloth face clipart" /></a>
 
         <div class="menu">
             <a href="#hero" class="nav-item">Hero</a>
