--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                 <script type="text/javascript" async src="https://tenor.com/embed.js"></script>  -->
 
                 
-                <h2 class="hero-text__big">
+                <h2 class="hero-text_sloth_down">
                     <img src="./img/travel.jpg">
                     <img src="./img/sloth_day_.gif">
-                    Sloth down and relax !
+                    Sloth down and visit Gdansk !
                 </h2>
 
             </div>
