sloth photo in slider updated

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     Sloth down and visit Gdansk !
                 </h2>
                 <div class="hero-slider">
-                    <img src="./img/travel.jpg">
+                    <img src="./img/travel1.jpg">
                     <img src="./img/sloth_day_.gif">
                 </div>
                
