feature section desktop version ready

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <footer>
         <div class="footer">
-            <div class="footer-text">Copyright © 2018 Z-leniwce team Meet 3City</div>
+            <div class="footer-text">Copyright © 2018 Z-leniwce team Laziness Radar</div>
         </div>
     </footer>
 
