Flash's foto added

--- a/index.html
+++ b/index.html
@@ -73,11 +73,6 @@
             </div>
 
             <div class="hero-right">
-                <!-- <img src="./img/g1.jpg">
-                <img src="./img/g2.jpg">
-                <img src="./img/g3.jpg">
-                <img src="./img/g4.jpg">
-                <img src="./img/g5.jpg"> -->
                 <h2 class="hero-text_sloth_down">
                     Sloth down and visit Gdansk !
                 </h2>
@@ -85,16 +80,6 @@
                     <img src="./img/travel1.jpg">
                     <img src="./img/sloth_day_.gif">
                 </div>
-               
-
-                <!-- <div class="tenor-gif-embed" data-postid="4899768" data-share-method="host" data-width="100%"
-                    data-aspect-ratio="1.3274336283185841">
-                <script type="text/javascript" async src="https://tenor.com/embed.js"></script>  -->
-
-
-
-
-
             </div>
         </div>
     </div>
@@ -216,10 +201,10 @@
                 </div>
 
                 <div class="team-member">
-                    <img class="member-img-container" src="img/joachim.jpg" />
+                    <img class="member-img-container" src="img/flash.jpeg" />
 
                     <h3 class="member-description">
-                        Joachim <br>Orłowski
+                        Leniwiec <br>Flash
                     </h3>
 
                     <div class="member-links">
