--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#main">
                         <li>Main</li>
                     </a>
-                    <a href="#form">
+                    <a href=".form">
                         <li>Form</li>
                     </a>
                     <a href="#team">
@@ -133,9 +133,10 @@
     </div>
 
     <div id="form">
+        <div class="form-text"> </div>
         <div class="form-container">
-            <div class="form">
 
+            <div class="form">
                 <form action="https://formspree.io/remek87@gmail.com" method="POST">
 
                     <div class="form-input">
@@ -219,7 +220,7 @@
                         </a>
                     </div>
                 </div>
-                
+
                 <div class="team-member">
                     <img class="member-img-container" src="img/flash.jpeg" />
 
