working with form - desktop

--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
 
                     <div class="form-input">
                         <div class="form-text">
-                            Subscribe to newsletter to access the game of most lazyest sloth in the world :D
+                           Would you like to know how to be a perfect lazy sloth...? :D <br/>
+                            Subscribe to newsletter to access the game of most lazyest sloth in the world ! <br/>
+                            Have fun and learn at the same time! 
+
                         </div>
 
                         <input required class="form-text__input" type="email" id="uname" name="name" placeholder="Your@email.com"
