desktop version ready

--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
 
                     <div class="form-input">
                         <div class="form-text">
-                           Would you like to know how to be a perfect lazy sloth...? :D <br/>
-                            Subscribe to newsletter to access the game of most lazyest sloth in the world ! <br/>
-                            Have fun and learn at the same time! 
-
+                            <h4>Would you like to be the best lazy sloth in the World... ? :D </h4>
+                            Subscribe to newsletter to access the game of a perfect sloth ! <br/>
+                            Have fun and learn at the same time! :)
                         </div>
 
                         <input required class="form-text__input" type="email" id="uname" name="name" placeholder="Your@email.com"
