ready to check by the rest of team

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#main">
                         <li>Main</li>
                     </a>
-                    <a href=".form">
+                    <a href="#form">
                         <li>Form</li>
                     </a>
                     <a href="#team">
