section APP added to the menu nav

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#main" class="nav-item">Main</a>
             <a href="#form" class="nav-item">Form</a>
             <a href="#team" class="nav-item">Team</a>
+            <a href="" class="nav-item">App</a>
         </div>
         <nav role="navigation">
             <div id="menuToggle">
@@ -44,6 +45,9 @@
                     </a>
                     <a href="#team">
                         <li>Team</li>
+                    </a>
+                    <a href="#team">
+                        <li>App</li>
                     </a>
                 </ul>
             </div>
