--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                 </div>
 
-                <div class="team-member">
+                <!-- <div class="team-member">
                     <img class="member-img-container" src="img/flash.jpeg" />
 
                     <h3 class="member-description">
@@ -242,7 +242,7 @@
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
