link to the app added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#main" class="nav-item">Main</a>
             <a href="#form" class="nav-item">Form</a>
             <a href="#team" class="nav-item">Team</a>
-            <a href="" class="nav-item">App</a>
+            <a href="http://app.zdeterminowane-leniwce.jfdd10.is-academy.pl/" class="nav-item">App</a>
         </div>
         <nav role="navigation">
             <div id="menuToggle">
@@ -46,7 +46,7 @@
                     <a href="#team">
                         <li>Team</li>
                     </a>
-                    <a href="#team">
+                    <a href="http://app.zdeterminowane-leniwce.jfdd10.is-academy.pl/">
                         <li>App</li>
                     </a>
                 </ul>
