--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Gamja+Flower|Pacifico" rel="stylesheet">
-    <link rel="stylesheet" href="project.css" media="(max-width: 999px)">
+    <link rel="stylesheet" href="project.css" media="(min-width: 350px)">
     <link rel="stylesheet" href="project.desktop.css" media="(min-width: 1000px)">
 </head>
 
