--- a/game/game.html
+++ b/game/game.html
@@ -64,6 +64,17 @@
                     </div>
                 </div>
             </div>
+            <div class="mainInstr">
+                <!-- appear after game ends, make some js for this -->
+                <div class="end-screen">
+                    <div class='end-screen-text'>
+                        <p> GAME OVER </p>
+                        <p> ¯\_(ツ)_/¯ </p>
+                        <p>Final Score: <span class='final-score'></span></p>
+                        <a  class="back-to-page" href="../index.html">Back to our page</a>
+                    </div>
+                </div>
+            </div>
 
             <!-- right -->
             <div class="shop-title">LAZY STORE</div>
