--- a/game/game.html
+++ b/game/game.html
@@ -53,14 +53,32 @@
                 </div>
             </div>
 
-            <div class="main">
+            <div class="main-beginning">
+                <!-- appear during the game -->
+                <div class="screen-beginning">
+                    <div class='screen-text-beginning'>
+                        <p> Instruction </p>
+                        <p> Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
+                            Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem
+                            próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym,
+                            pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z
+                            publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z
+                            zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na
+                            komputerach osobistych, jak Aldus PageMaker </p>
+                        <!-- <p>Final Score: <span class='final-score'></span></p> -->
+                        <a class="back-to-page" href="../index.html">Back to our page</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="main-end">
                 <!-- appear after game ends, make some js for this -->
                 <div class="end-screen">
                     <div class='end-screen-text'>
                         <p> GAME OVER </p>
                         <p> ¯\_(ツ)_/¯ </p>
                         <p>Final Score: <span class='final-score'></span></p>
-                        <a  class="back-to-page" href="../index.html">Back to our page</a>
+                        <a class="back-to-page" href="../index.html">Back to our page</a>
                     </div>
                 </div>
             </div>
@@ -100,7 +118,7 @@
     <script src="game.js"></script>
     <script src="game.js"></script>
 
-   
+
     <!-- ^^^ game.js always last ^^^ -->
     <!-- ^^^ game.js ALWAYS LAST ^^^ -->
 </body>
