--- a/game/game.html
+++ b/game/game.html
@@ -60,9 +60,9 @@
                 </div>
             </div>
 
-            <div class="main-end">
+            <div class="main">
                 <!-- appear after game ends, make some js for this -->
-                <div class="end-screen">
+                <div class="screen">
                     <div class='screen-text-beginning'>
                         <p> Instruction </p>
                         <p> Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
@@ -117,8 +117,6 @@
     <script src="upgrade.js"></script>
     <script src="end_screen.js"></script>
 
-    <!-- ^^^ game.js always last ^^^ -->
-    <!-- ^^^ game.js ALWAYS LAST ^^^ -->
 </body>
 
 
