--- a/game/game.html
+++ b/game/game.html
@@ -56,7 +56,7 @@
             <div class="main-beginning">
                 <!-- appear during the game -->
                 <div class="screen-beginning">
-                    
+
                 </div>
             </div>
 
@@ -64,14 +64,12 @@
                 <!-- appear after game ends, make some js for this -->
                 <div class="screen">
                     <div class='screen-text-beginning'>
-                        <p> Instruction </p>
-                        <p> Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
-                            Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem
-                            próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym,
-                            pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z
-                            publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z
-                            zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na
-                            komputerach osobistych, jak Aldus PageMaker </p>
+                        <p> Lazy Sloth </p>
+                        <p> Help the Lazy Sloth to move all his tasks and duties to another day by clicking on the
+                        Todo Task list!
+                        You can always buy upgrades to make your work easier and faster.
+                        Remember, you have only 90 seconds! Try to postpone the tasks as fast as you can. Be better
+                        than your friends! :) </p>
                         <!-- <p>Final Score: <span class='final-score'></span></p> -->
                         <a class="back-to-page" href="../index.html">Back to our page</a>
                     </div>
