--- a/game/game.html
+++ b/game/game.html
@@ -63,15 +63,15 @@
             <div class="main">
                 <!-- appear after game ends, make some js for this -->
                 <div class="screen">
-                    <div class='screen-text-beginning'>
-                        <p> Lazy Sloth </p>
+                    <div class='screen-text-beginning'> <br/>
+                        <h3> Lazy Sloth </h3> 
                         <p> Help the Lazy Sloth to move all his tasks and duties to another day by clicking on the
-                        Todo Task list!
-                        You can always buy upgrades to make your work easier and faster.
-                        Remember, you have only 90 seconds! Try to postpone the tasks as fast as you can. Be better
-                        than your friends! :) </p>
+                        Todo Task list! <br/> <br/>
+                        You can always buy upgrades to make your work easier and faster.<br/> <br/>
+                        Remember, you have only 90 seconds! Try to postpone the tasks as fast as you can. <br/> <br/> Be better
+                        than your friends! :) </p> 
                         <!-- <p>Final Score: <span class='final-score'></span></p> -->
-                        <a class="back-to-page" href="../index.html">Back to our page</a>
+                        <a class="back-to-page-beginnging" href="../index.html">Back to our page</a>
                     </div>
                     <div class='end-screen-text'>
                         <p> GAME OVER </p>
